Updated pom.xml, project.java, etc